ingressroute-keycloak-gpu02.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`keycloak.83-206-89-105.nip.io`)
    middlewares:
#    - name: security
#    - name: ratelimit
    services:
    - name: keycloak
      port: 8080
  tls:
    certResolver: letsencrypt
