ingressroute-keycloak-lysdemolab.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-internal
  namespace: keycloak
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`keycloak.gpu02.lysdemolab.fr`)
    middlewares:
#    - name: security
#    - name: ratelimit
    services:
    - name: keycloak
      port: 8080
  tls:
    certResolver: letsencrypt
